[tool.poetry]
name = "embedfix"
version = "1.0.4"
description = "Fixes Discord embeds for Instagram and Twitter links"
authors = ["Dave Gordon <dgordon9221@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0"
discord = "^2.3.2"
discord-py = "^2.3.2"
requests = "^2.31.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
